# sqlx-crud

./: .gitignore  Cargo.toml  LICENSE  MILESTONES  README.md  rusty-tags.vi
axum-test/: Cargo.toml  rust.db  rusty-tags.vi
axum-test/src/: expanded.rs  main.rs
examples/axum/: Cargo.toml  rust.db  rusty-tags.vi
examples/axum/src/: main.rs
examples/issue-9/: Cargo.toml  rusty-tags.vi  sqlite.db
examples/serenity/: rusty-tags.vi
examples/serenity/src/: main.rs
sqlx-crud-macros/: Cargo.toml  rusty-tags.vi
sqlx-crud-macros/src/: lib.rs  lib_bak.rs
src/: doctest.rs  error.rs  lib.rs  schema.rs  traits.rs
